--- a/.gitignore
+++ b/.gitignore
@@ -59,8 +59,13 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+.db.sqlite3
+/db.sqlite3
+/db.sqlite3/
 db.sqlite3-journal
-
+.Latest Report
+/Latest Report/
+/Latest Report
 # Flask stuff:
 instance/
 .webassets-cache
