--- a/.gitignore
+++ b/.gitignore
@@ -58,10 +58,10 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-.db.sqlite3
-/db.sqlite3
-/db.sqlite3/
+# db.sqlite3
+# .db.sqlite3
+# /db.sqlite3
+# /db.sqlite3/
 db.sqlite3-journal
 .Latest Report
 /Latest Report/
