--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+test*.*
 .db.sqlite3
 /db.sqlite3
 /db.sqlite3/
@@ -114,7 +115,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
+ 
 # Spyder project settings
 .spyderproject
 .spyproject
