--- a/.gitignore
+++ b/.gitignore
@@ -58,12 +58,12 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
 test*.*
-.db.sqlite3
-/db.sqlite3
-/db.sqlite3/
-db.sqlite3-journal
+# db.sqlite3
+# .db.sqlite3
+# /db.sqlite3
+# /db.sqlite3/
+# db.sqlite3-journal
 .Latest Report
 /Latest Report/
 /Latest Report
